@@ -1,10 +1,8 @@
 package com.team11.shareoffice.member.service;
 
-import com.team11.shareoffice.global.dto.ResponseDto;
-import com.team11.shareoffice.global.exception.CustomException;
-import com.team11.shareoffice.global.util.ErrorCode;
 import com.team11.shareoffice.like.entity.Likes;
 import com.team11.shareoffice.like.repository.LikeRepository;
+import com.team11.shareoffice.member.dto.MyReservesResponseDto;
 import com.team11.shareoffice.member.dto.ProfileCountDto;
 import com.team11.shareoffice.member.dto.ProfileDto;
 import com.team11.shareoffice.member.entity.Member;
@@ -23,7 +21,6 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -38,40 +35,32 @@ public class MyPageService {
     private final MemberValidator memberValidator;
 
     @Transactional(readOnly = true)
-    public ResponseDto<List<PostResponseDto>> getMyPosts(Member member) {
+    public List<PostResponseDto> getMyPosts(Member member) {
         // 내가 쓴 게시글 리스트 찾기.
         List<Post> posts = postRepository.findAllByMemberOrderByCreatedAt(member);
-
-        List<PostResponseDto> postResponseList = posts.stream()
+        return posts.stream()
                 .map(post -> new PostResponseDto(post, isLikedByMember(post, member), 3))
-                .collect(Collectors.toList());
-
-        return ResponseDto.setSuccess("내 게시글목록 조회성공", postResponseList);
+                .toList();
     }
 
     // 나의 좋아요 목록
     @Transactional(readOnly = true)
-    public ResponseDto<List<PostResponseDto>> getMyLikes(Member member) {
+    public List<PostResponseDto> getMyLikes(Member member) {
         List<Post> postList = likeRepository.findAllByMemberAndLikeStatus(member, true).stream()
                 .map(like -> like.getPost()) // Like 엔티티에서 Post 엔티티로 변환
-                .collect(Collectors.toList());
-        List<PostResponseDto> postResponseList = postList.stream()
-
+                .toList();
+        return postList.stream()
                 .map(post -> new PostResponseDto(post, isLikedByMember(post, member), getUserStatus(member, post)) )
+                .toList();
 
-                .collect(Collectors.toList());
-        return ResponseDto.setSuccess("내 좋아요 목록 조회 성공", postResponseList);
     }
 
     //나의 예약 현황
     @Transactional(readOnly = true)
-    public ResponseDto<List<PostResponseDto>> getMyReserves(Member member) {
-
+    public List<MyReservesResponseDto> getMyReserves(Member member) {
         List<Reservation> reservationList = reservationRepository.findAllByMemberOrderByStartDateAsc(member);
+        return reservationList.stream().map(reservation -> new MyReservesResponseDto(reservation.getPost(), isLikedByMember(reservation.getPost(), member), 2, reservation, reservation.isFinished())).toList();
 
-        List<PostResponseDto> postResponseDtoList = reservationList.stream().map(reservation -> new PostResponseDto(reservation.getPost(), isLikedByMember(reservation.getPost(), member), 2,reservation)).collect(Collectors.toList());
-
-        return ResponseDto.setSuccess("나의 예약 현황 목록 조회 완료", postResponseDtoList);
     }
 
     private boolean isLikedByMember(Post post, Member member) {
@@ -84,7 +73,7 @@ public class MyPageService {
             return 3;
         }
         else {
-            if(reservationRepository.findByMemberAndPost(member,post).isPresent()){
+            if(reservationRepository.findByMemberAndPostAndNotFinished(member,post).isPresent()){
                 return 2;
             }
             return 1;
@@ -93,7 +82,7 @@ public class MyPageService {
 
     //프로필조회
     @Transactional(readOnly = true)
-    public ResponseDto<ProfileCountDto> profile(Member member) {
+    public ProfileCountDto profile(Member member) {
 
         memberValidator.validateEmailExist(member.getEmail());
 
@@ -115,13 +104,11 @@ public class MyPageService {
         List<Post> myReservations = reservationRepository.findAllByMemberOrderByStartDateAsc(member).stream().map(Reservation::getPost).toList();
         int reserveCount = myReservations.size();
 
-        ProfileCountDto profileCountDto = new ProfileCountDto(email,nickName, imageUrl, postCount, likeCount, reserveCount);
-
-        return ResponseDto.setSuccess("프로필 조회성공",profileCountDto);
+        return new ProfileCountDto(email,nickName, imageUrl, postCount, likeCount, reserveCount);
     }
 
     // 프로필 수정
-    public ResponseDto<ProfileDto> profileModify(ProfileDto profileDto, MultipartFile image, Member member) throws IOException {
+    public ProfileDto profileModify(ProfileDto profileDto, MultipartFile image, Member member) throws IOException {
 
         String nickName = profileDto.getNickname();
         // 닉네임 중복 검사
@@ -143,8 +130,6 @@ public class MyPageService {
         member.updateImageUrl(uploadFilename);
 
         memberRepository.save(member); // ???
-        ProfileDto modified = new ProfileDto(nickName);
-
-        return ResponseDto.setSuccess("프로필 수정 성공",modified);
+        return new ProfileDto(nickName);
     }
 }
